# sinh-x-wallpaper

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  default_config.toml  flake.nix  note.md
checks/pre-commit-hooks/: default.nix
data/: wallhaven_test_response.json
shells/default/: default.nix
src/: config.rs  database.rs  error.rs  main.rs  wallhaven.rs
