[package]
name = "sinh-x-wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
tokio = { version = "1.39.2", features = ["full"] }
dirs = "5.0.1"
toml = "0.8"
