[package]
name = "sinh-x-wallpaper"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.26"
tokio = { version = "1.39", features = ["full"] }
dirs = "5.0.1"
toml = "0.8"
sled = "0.34"
log = "0.4"
bincode = "1.3"
colored = "2.1"
regex = "1.10"
lazy_static = "1.5"
