[package]
name = "sinh-x-wallpaper"
version = "0.3.0"
edition = "2021"

[dependencies]
bincode = "1.3"
colored = "2.1"
dirs = "5.0.1"
indicatif = "0.17"
lazy_static = "1.5"
log = "0.4"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sled = "0.34"
structopt = "0.3.26"
tokio = { version = "1.39", features = ["full"] }
toml = "0.8"

